Remove Hardcoded Attendances lol

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">#151515</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:background">#151515</item>
         <item name="android:fontFamily">@font/product_sans_family</item>
         <item name="android:windowContentTransitions">true</item>
