--- a/app/src/main/res/layout/activity_cms.xml
+++ b/app/src/main/res/layout/activity_cms.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_below="@id/profilecard"
-            android:text="First Last"
+            android:text=""
             android:layout_centerHorizontal="true"
             android:textSize="30dp" />
 
@@ -120,203 +120,28 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:id="@+id/semesterscrollview"
-            android:layout_height="225dp"
-            android:scrollbars="none"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="1dp"
-            android:layout_below="@id/phonecard"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_height="225dp"
+                android:scrollbars="none"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="10dp"
-                    android:backgroundTint="#1a1a1a"
-                    app:cardCornerRadius="20dp">
-
-                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                        android:id="@+id/circularProgressBar"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_gravity="center"
-                        app:cpb_background_progressbar_color="#b6bbd8"
-                        app:cpb_background_progressbar_width="5dp"
-                        app:cpb_progress_direction="to_right"
-                        app:cpb_progressbar_color="#e91e63"
-                        android:background="#1a1a1a"
-                        app:cpb_progressbar_width="10dp"
-                        app:cpb_round_border="true" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="Semester 1"
-                        android:textColor="@android:color/white" />
-
-                    <TextView
-                        android:id="@+id/semester1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="36dp"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="20dp" />
-
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="10dp"
-                    android:backgroundTint="#1a1a1a"
-                    app:cardCornerRadius="20dp">
-
-                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                        android:id="@+id/circularProgressBar2"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_gravity="center"
-                        app:cpb_background_progressbar_color="#b6bbd8"
-                        app:cpb_background_progressbar_width="5dp"
-                        app:cpb_progress_direction="to_right"
-                        app:cpb_progressbar_color="#e91e63"
-                        android:background="#1a1a1a"
-                        app:cpb_progressbar_width="10dp"
-                        app:cpb_round_border="true" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="Semester 2"
-                        android:textColor="@android:color/white" />
-
-                    <TextView
-                        android:id="@+id/semester2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="36dp"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="20dp" />
-
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="10dp"
-                    android:backgroundTint="#1a1a1a"
-                    app:cardCornerRadius="20dp">
-
-                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                        android:id="@+id/circularProgressBar3"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_gravity="center"
-                        app:cpb_background_progressbar_color="#b6bbd8"
-                        app:cpb_background_progressbar_width="5dp"
-                        android:background="#1a1a1a"
-                        app:cpb_progress_direction="to_right"
-                        app:cpb_progressbar_color="#e91e63"
-                        app:cpb_progressbar_width="10dp"
-                        app:cpb_round_border="true" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="Semester 3"
-                        android:textColor="@android:color/white" />
-
-                    <TextView
-                        android:id="@+id/semester3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="36dp"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="20dp" />
-
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="10dp"
-                    android:backgroundTint="#1a1a1a"
-                    app:cardCornerRadius="20dp">
-
-                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                        android:id="@+id/circularProgressBar4"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_gravity="center"
-                        app:cpb_background_progressbar_color="#b6bbd8"
-                        app:cpb_background_progressbar_width="5dp"
-                        android:background="#1a1a1a"
-                        app:cpb_progress_direction="to_right"
-                        app:cpb_progressbar_color="#e91e63"
-                        app:cpb_progressbar_width="10dp"
-                        app:cpb_round_border="true" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="Semester 4"
-                        android:textColor="@android:color/white" />
-
-                    <TextView
-                        android:id="@+id/semester4"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="36dp"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="20dp" />
-
-
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-        </HorizontalScrollView>
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="1dp"
+                android:orientation="horizontal"
+                android:layout_below="@id/phonecard"
+                android:layout_marginEnd="10dp"
+                android:id="@+id/attendancerecycler"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="300dp"
             android:layout_height="40dp"
 
-            android:layout_below="@id/semesterscrollview"
+            android:layout_below="@id/attendancerecycler"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:background="#1a1a1a"
+            android:id="@+id/timetablecard"
+            app:cardCornerRadius="20dp"
+            android:backgroundTint="@color/colorPrimary"
             android:layout_centerHorizontal="true">
 
             <TextView
@@ -325,6 +150,7 @@
                 android:textStyle="bold"
                 android:id="@+id/timetablebutton"
                 android:textSize="20dp"
+                android:textColor="@android:color/white"
                 android:clickable="true"
                 android:background="@android:color/transparent"
                 android:gravity="center"
@@ -341,6 +167,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Clear Cache" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+
+            android:layout_below="@id/timetablecard"
+            android:layout_marginBottom="20dp"
+            android:background="#1a1a1a"
+            android:id="@+id/resourcecard"
+            android:visibility="gone"
+            app:cardCornerRadius="20dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Resources"
+                android:textStyle="bold"
+                android:id="@+id/resourcebuttom"
+                android:textSize="20dp"
+                android:textColor="@android:color/white"
+                android:clickable="true"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:layout_height="match_parent" />
+
+        </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
 </ScrollView>
