--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,6 +24,7 @@
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
+            android:layout_marginRight="5dp"
             android:layout_height="40dp"
             android:textCursorDrawable="@drawable/cursor_color"
             android:layout_marginLeft="10dp"
@@ -54,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:cursorVisible="true"
+            android:layout_marginRight="5dp"
             android:layout_marginLeft="10dp"
             android:textCursorDrawable="@drawable/cursor_color"
             android:background="@android:color/transparent"
@@ -74,6 +77,19 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
