--- a/app/src/main/res/layout/activity_cmswv.xml
+++ b/app/src/main/res/layout/activity_cmswv.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CMSWV">
+    tools:context=".views.CMSWV">
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyleHorizontal"
