--- a/app/src/main/res/layout/activity_cms.xml
+++ b/app/src/main/res/layout/activity_cms.xml
@@ -152,6 +152,7 @@
                 android:textSize="20dp"
                 android:textColor="@android:color/white"
                 android:clickable="true"
+                android:visibility="invisible"
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:layout_height="match_parent" />
