--- a/app/src/main/res/layout/class_card.xml
+++ b/app/src/main/res/layout/class_card.xml
@@ -42,17 +42,22 @@
                    android:layout_width="wrap_content"
                    android:id="@+id/start1"
                    android:layout_marginTop="20dp"
+                   android:textSize="20sp"
+                   android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="09:30"/>
+
                <TextView
                    android:id="@+id/start2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
+                   android:layout_marginTop="-5dp"
                    android:background="@android:color/transparent"
-                   android:text="AM"/>
+                   android:text="AM"
+                   android:textSize="15dp" />
 
            </LinearLayout>
 
