--- a/app/src/main/res/layout/activity_cms.xml
+++ b/app/src/main/res/layout/activity_cms.xml
@@ -1,5 +1,11 @@
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_above="@id/bottom_nav"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -197,3 +203,12 @@
     </RelativeLayout>
 
 </ScrollView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:id="@+id/bottom_nav"
+        android:layout_height="wrap_content"
+        app:menu="@menu/menu_nav"
+        android:layout_alignParentBottom="true">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+</RelativeLayout>
