--- a/app/src/main/res/layout/class_card.xml
+++ b/app/src/main/res/layout/class_card.xml
@@ -85,6 +85,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginStart="5dp"
+        android:background="@android:color/transparent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
