--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -54,6 +54,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:id="@+id/bottom_nav"
+        app:itemBackground="@android:color/transparent"
         android:layout_height="wrap_content"
         app:menu="@menu/menu_nav"
         android:layout_alignParentBottom="true"
