--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:id="@+id/cms"
-    android:title="CMS"
-    android:icon="@drawable/white_error"/>
+    android:title="Home"
+    android:icon="@drawable/ic_home"/>
     <item
         android:id="@+id/timetable"
         android:title="timetable"
-        android:icon="@drawable/white_error"/>
+        android:icon="@drawable/ic_timetable"/>
     <item
         android:id="@+id/notice"
         android:title="notice"
